# simpleTBEM

./: .gitignore  CMakeLists.txt  README.md
cmake/functions/: Getcomplex_bessel.cmake  complex_bessel_build.fix.sh
examples/: CMakeLists.txt  assembler.cpp  build_shapes.cpp  mass.cpp  solver.cpp
include/: abstract_bem_space.hpp  abstract_parametrized_curve.hpp  continuous_space.hpp  data.hpp  discontinuous_space.hpp  double_layer.hpp  gauleg.hpp  genLaguerreRule.hpp  hypersingular.hpp  integral_gauss.hpp  mass_matrix.hpp  operators.hpp  parametrized_circular_arc.hpp  parametrized_line.hpp  parametrized_mesh.hpp  single_layer.hpp  solvers.hpp
source/: CMakeLists.txt  double_layer.cpp  hypersingular.cpp  mass_matrix.cpp  single_layer.cpp
source/utilities/: CMakeLists.txt  solvers.cpp
utilities/: CMakeLists.txt  assembler.cpp  build_shapes.cpp  mass.cpp  solver.cpp
